Cleaning up and making the wait service compatible in struct definition with other services
